# Praca-Dyplomowa-Bielaczyc-Wojciech

Firmware_Common/: CMakeLists.txt
Firmware_Common/CAN/: CAN_Defines.hpp  Can_Interface.cpp  Can_Interface.hpp
Firmware_Common/Inc/: Data_Collection.hpp  Pin_Defines.hpp
Modules/Communication/Source/MQTT/: Lib_mqtt.cpp
Modules/Communication/Source/wifi/: Lib_wifi.hpp
Modules/Communication/main/: main.cpp
Modules/Data/: CMakeLists.txt
Modules/Data/CardInfo/: CardInfo.ino
Modules/Data/dht22/: dht22.ino
Modules/Data/hall sensor/: hall_sensor.cpp  hall_sensor.h  main.cpp
Modules/Data/main/: CMakeLists.txt  main.cpp
Modules/Data/neo6m/: neo6m.ino
Modules/Electric/Source/: Credentials.h
Modules/Electric/main/: CMakeLists.txt
Modules/projekt_testowy_CAN/Source/MQTT/: Lib_mqtt.hpp
Modules/projekt_testowy_CAN/Source/wifi/: Lib_wifi.cpp
Modules/projekt_testowy_CAN/main/: CMakeLists.txt  main.cpp
